Cherry-pick r255494. rdar://problem/59097756

[WK1] hiddenPageCSSAnimationSuspensionEnabled should be enabled by default for Cocoa platforms
    https://bugs.webkit.org/show_bug.cgi?id=207042
    <rdar://problem/58934778>

    Reviewed by Zalan Bujtas.

    While HiddenPageCSSAnimationSuspensionEnabled is specified in WebPreferences.yaml to default to DEFAULT_HIDDEN_PAGE_CSS_ANIMATION_SUSPENSION_ENABLED,
    which is defined to be true on Cocoa platforms in WebPreferencesDefaultValues.h, it is hard-coded to @NO in WK1 although clearly the intent is for
    this preference to be enabled. So we switch that default value in WK1 as well.

    * WebView/WebPreferences.mm:
    (+[WebPreferences initialize]):

    Canonical link: https://commits.webkit.org/220055@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255494 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.194@safari-609-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@255759 268f45cc-cd09-0410-ab3c-d52691b4dbfc